--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <script defer src="js/script.js"></script>
 </head>
 <body>
-    
+    <input type="text" id="age" placeholder="Eta'">
+    <input type="text" id="km" placeholder="Chilometri">
+    <button type="button" id="button">GENERA</button>
+    <hr>
+    <p id="paragraph"></p>
 </body>
 </html>
