added age and km

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <input type="text" id="km" placeholder="Chilometri">
     <button type="button" id="button">GENERA</button>
     <hr>
-    <p id="paragraph"></p>
+    <p id="paragraph">
+        <span class="age"></span>
+        <span class="km"></span>
+    </p>
 </body>
 </html>
