--- a/index.html
+++ b/index.html
@@ -5,20 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+<!-- bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 <!-- css -->
 <link rel="stylesheet" href="css/style.css">
 
 <!-- js -->
 <script defer src="js/script.js"></script>
+
 </head>
 <body>
-    <input type="text" id="age" placeholder="Eta'">
-    <input type="text" id="km" placeholder="Chilometri">
-    <button type="button" id="button">GENERA</button>
-    <hr>
-    <p id="paragraph">
-        <span class="age"></span>
-        <span class="km"></span>
-    </p>
+    <main class="container">
+        <section id="form-section" class="m-5">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Inserisci i tuoi dati</h5>
+                    <hr>
+                    <div class="row row-cols-1 row-cols-3">
+                        <div class="col">
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Nome</label>
+                                <input type="text" class="form-control" id="name">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="mb-3">
+                                <label for="kms" class="form-label">Chilometri</label>
+                                <input type="number" class="form-control" id="kms" min="1" max="1000">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <label for="age" class="form-label">Fascia d'età</label>
+                            <select id="age" class="form-select" >
+                                <option selected value="">Adulto</option>
+                                <option value="under">Under 18</option>
+                                <option value="over">Over 65</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer d-flex justify-content-end gap-3">
+                    <button class="btn btn-primary" id="reset-button">Annulla</button>
+                    <button class="btn btn-primary" id="confirm-button">Conferma</button>
+                </div>
+            </div>
+        </section>
+        <section id="ticket-section" class="m-5 d-none"></section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
