--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                         <div class="col">
                             <div class="mb-3">
                                 <label for="name" class="form-label">Nome</label>
-                                <input type="text" class="form-control" id="name">
+                                <input type="text" class="form-control" id="name" value="Luca Bellan">
                             </div>
                         </div>
                         <div class="col">
                             <div class="mb-3">
                                 <label for="kms" class="form-label">Chilometri</label>
-                                <input type="number" class="form-control" id="kms" min="1" max="1000">
+                                <input type="number" class="form-control" id="kms" min="1" max="1000" value="10">
                             </div>
                         </div>
                         <div class="col">
@@ -46,12 +46,48 @@
                     </div>
                 </div>
                 <div class="card-footer d-flex justify-content-end gap-3">
-                    <button class="btn btn-primary" id="reset-button">Annulla</button>
+                    <button class="btn btn-secondary" id="reset-button">Annulla</button>
                     <button class="btn btn-primary" id="confirm-button">Conferma</button>
                 </div>
             </div>
         </section>
-        <section id="ticket-section" class="m-5 d-none"></section>
+        <section id="ticket-section" class="m-5 d-none">
+            <div class="card mb-3">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="img/treno.jpg" class="img-fluid rounded-start" alt="treno">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Il tuo biglietto</h5>
+                      <hr>
+                      <h4 id="passenger-name">Luca bellan</h4>
+                      <div class="row row-cols-1 row-cols-4">
+                        <div class="col">
+                            <h6>Tariffa</h6>
+                            <div id="rate">Tariffa Standard</div>
+                        </div>
+                        <div class="col">
+                            <h6>Carrozza</h6>
+                            <div id="car">9</div>
+                        </div>
+                        <div class="col">
+                            <h6>PNR</h6>
+                            <div id="pnr">99999</div>
+                        </div>
+                        <div class="col">
+                            <h6>Totale</h6>
+                            <div id="price">10</div>
+                        </div>
+                      </div>
+                      <div class="mt-5 d-flex justify-content-end">
+                        <button class="btn btn-success" id="buy-button">Conferma e acquista</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
