added validation and alert

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <div class="card-body">
                     <h5 class="card-title">Inserisci i tuoi dati</h5>
                     <hr>
+                    <div class="alert d-none" role="alert">
+                        Alcuni campi non sono validi
+                    </div>
                     <div class="row row-cols-1 row-cols-3">
                         <div class="col">
                             <div class="mb-3">
